<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="com.example.jduclos1.myapplication.CourseActEditor"
                tools:showIn="@layout/act_c_editor">

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/gridLayout">


        <TextView
                android:id="@+id/tvCourseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:layout_row="0"
                android:text="@string/course_name" />

        <EditText
                android:id="@+id/etCourseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:layout_row="0"
                android:ems="10"
                android:inputType="text"/>

        <TextView
                android:id="@+id/tvCourseStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:layout_row="1"
                android:text="@string/course_start" />

        <EditText
                android:id="@+id/etCourseStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:layout_row="1"
                android:inputType="date" />

        <TextView
                android:id="@+id/tvCourseEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:layout_row="2"
                android:text="@string/course_end" />

        <EditText
                android:id="@+id/etCourseEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:layout_row="2"
                android:inputType="date" />

        <TextView
                android:id="@+id/tvCourseMentor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:layout_row="3"
                android:text="@string/course_mentor" />

        <EditText
                android:id="@+id/etCourseMentor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:layout_row="3"
                android:inputType="text" />

        <TextView
                android:id="@+id/tvCourseMentorPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:layout_row="4"
                android:text="@string/course_mentor_phone" />

        <EditText
                android:id="@+id/etCourseMentorPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:layout_row="4"
                android:inputType="phone" />

        <TextView
                android:id="@+id/tvCourseMentorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="8dp"
                android:layout_row="5"
                android:text="@string/course_mentor_email" />

        <EditText
                android:id="@+id/etCourseMentorEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="8dp"
                android:layout_row="5"
                android:inputType="textWebEmailAddress" />

    </GridLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="saveCourseChanges"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save_course" />


</RelativeLayout>