<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="com.example.jduclos1.myapplication.AssessmentActEditor"
                tools:showIn="@layout/act_assess_editor">


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="saveAssessmentChanges"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save_assessment" />

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gridLayout"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <TextView
                android:text="@string/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:id="@+id/tvAssessmentCode" />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etAssessmentCode" />

        <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:id="@+id/tvAssessmentName" />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:inputType="text"
                android:ems="10"
                android:maxLines="1"
                android:id="@+id/etAssessmentName" />

        <TextView
                android:text="@string/date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:id="@+id/tvAssessmentDatetime" />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:inputType="text"
                android:maxLines="3"
                android:ems="10"
                android:id="@+id/etAssessmentDatetime" />

        <TextView
                android:text="@string/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:id="@+id/tvAssessmentDescription" />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:inputType="text"
                android:maxLines="3"
                android:ems="10"
                android:id="@+id/etAssessmentDescription" />

    </GridLayout>


</RelativeLayout>