<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="com.example.jduclos1.myapplication.TermActEditor"
                tools:showIn="@layout/act_t_editor">

                <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/gridLayout">

                        <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_margin="8dp"
                                android:layout_row="0"
                                android:text="@string/term_name" />

                        <EditText
                                android:id="@+id/termNameEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_margin="8dp"
                                android:layout_row="0"
                                android:inputType="text"
                            />

                        <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_margin="8dp"
                                android:layout_row="1"
                                android:text="@string/start_date" />

                        <EditText
                                android:id="@+id/termStartDateEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_margin="8dp"
                                android:inputType="date"
                                android:layout_row="1" />

                        <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_column="0"
                                android:layout_margin="8dp"
                                android:layout_row="2"
                                android:text="@string/end_date" />

                        <EditText
                                android:id="@+id/termEndDateEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_margin="8dp"
                                android:inputType="date"
                                android:layout_row="2" />
                </GridLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="saveTermChanges"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save_term" />
</RelativeLayout>